Fix more URLs to forrest.apache.org
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@20972 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/core/context/default-forrest.properties
+++ b/src/core/context/default-forrest.properties
@@ -29,7 +29,7 @@ project.skin=forrest-site
 #project.skin=krysalis-site
 
 # comma seperated list, file:/// is supported
-forrest.skins.descriptors=http://xml.apache.org/forrest/skins/skins.xml
+forrest.skins.descriptors=http://forrest.apache.org/skins/skins.xml
 
 ##############
 # behavioural properties
