--- a/src/core/fresh-site/forrest.properties
+++ b/src/core/fresh-site/forrest.properties
@@ -29,7 +29,7 @@
 #project.skin=tigris-style
 
 # comma seperated list, file:/// is supported
-#forrest.skins.descriptors=http://xml.apache.org/forrest/skins/skins.xml,file:///c:/myskins/skins.xml
+#forrest.skins.descriptors=http://forrest.apache.org/skins/skins.xml,file:///c:/myskins/skins.xml
 
 ##############
 # behavioural properties
