--- a/forrest.properties
+++ b/forrest.properties
@@ -19,7 +19,7 @@
 project.name=forrest
 #project.skin=forrest-site
 #project.skin=forrest-css
-#project.skin=krysalis-site
+project.skin=krysalis-site
 #project.skin=tigris-style
 
 project.bugtracking-url=http://issues.cocoondev.org/jira/secure/ViewIssue.jspa?key=
