Use the forrest.properties file to get the bug tracking url (fix regression)
Make our bugs show the bugs to fix *for* a certain release, not the one reported *no* a certain release.

This shows our roadmap for the release.

git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@21027 13f79535-47bb-0310-9956-ffa450edef68

--- a/forrest.properties
+++ b/forrest.properties
@@ -22,4 +22,4 @@ project.name=forrest
 project.skin=krysalis-site
 #project.skin=tigris-style
 
-project.bugtracking-url=http://issues.cocoondev.org/jira/secure/ViewIssue.jspa?key=
+project.bugtracking-url=http://issues.cocoondev.org/jira/secure/IssueNavigator.jspa?pid=10000&fixfor=10030&resolutionIds=-1&tempMax=25&view=rss&reset=true
