Use separate properties "bugtracking-url" and "issues-rss-url". The last commit r21027 broke the Issues links on the generated changes.html So separated the concerns.
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@21117 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/core/context/default-forrest.properties
+++ b/src/core/context/default-forrest.properties
@@ -134,5 +134,9 @@ forrest.maxmemory=64m
 # Any other arguments to pass to the JVM. For example, to run on an X-less
 # server, set to -Djava.awt.headless=true
 forrest.jvmargs=
-project.bugtracking-url=http://nagoya.apache.org/bugzilla/show_bug.cgi?id=
+# The bugtracking URL - the issue number will be appended
+project.bugtracking-url=http://issues.apache.org/bugzilla/show_bug.cgi?id=
+#project.bugtracking-url=http://issues.apace.org/jira/browse/
+# The issues list as rss
+#project.issues-rss-url=
 project.i18n=false
