Fix some broken hard-coded links. Put some link elements all on one line to make it easier to grep broken links.
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@21140 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/documentation/content/xdocs/build.xml
+++ b/src/documentation/content/xdocs/build.xml
@@ -24,8 +24,8 @@
       <title>Getting the Forrest source</title>
       <section>
         <title>Step-by-step Subversion (SVN) instructions</title>
-          <note>If you are behind a proxy, see <link 
-href="http://subversion.tigris.org/project_faq.html#proxy">this FAQ</link>.</note>
+          <note>If you are behind a proxy, see 
+          <link href="http://subversion.tigris.org/project_faq.html#proxy">this FAQ</link>.</note>
         <ol> 
           <li>Make sure you have a recent release of a
            <link href="http://subversion.tigris.org/">Subversion</link>
