--- a/build.xml
+++ b/build.xml
@@ -303,10 +303,10 @@
       basedir="${build.classes}"/>
     <echo>
   *-----------------------------------------------------------------
-  | installation notice 
+  | Installation notice 
   *-----------------------------------------------------------------
   | You have built the distribution of Forrest.
-  | Please set the environment variable FORREST_HOME point to src/core
+  | Please set the environment variable FORREST_HOME to point to src/core
   | It is recommended to add
   |    unix: $FORREST_HOME/bin: to your $PATH
   |    win: %FORREST_HOME%\bin; to your %PATH%
