--- a/src/core/fresh-site/forrest.properties
+++ b/src/core/fresh-site/forrest.properties
@@ -14,6 +14,7 @@
 
 ##############
 # Properties used by forrest.build.xml for building the website
+# These are the defaults, un-comment them if you need to change them.
 ##############
 
 # Prints out a summary of Forrest settings for this project
