Mount a sitemap if it's found in the project dir (location and filename configurable via forrest.properties)
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@21543 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/core/context/default-forrest.properties
+++ b/src/core/context/default-forrest.properties
@@ -49,6 +49,7 @@ project.content-dir=src/documentation
 project.raw-content-dir=${project.content-dir}/content
 project.conf-dir=${project.content-dir}/conf
 project.sitemap-dir=${project.content-dir}
+project.sitemap=${project.content-dir}/sitemap.xmap
 project.xdocs-dir=${project.content-dir}/content/xdocs
 project.resources-dir=${project.content-dir}/resources
 project.stylesheets-dir=${project.resources-dir}/stylesheets
