Lots of good information about SVN at the ASF /dev/ pages.
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@23005 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/documentation/content/xdocs/build.xml
+++ b/src/documentation/content/xdocs/build.xml
@@ -29,14 +29,19 @@
         <ol> 
           <li>Make sure you have a recent release of a
            <link href="http://subversion.tigris.org/">Subversion</link>
-           client installed.</li>
-          <li>At a command prompt, enter "<code>svn co http://svn.apache.org/repos/asf/forrest/trunk forrest</code>" (committers should replace <code>http</code> with <code>https</code>)</li>
+           client installed and properly configured.</li>
+          <li>Read the ASF notes about source repositories and
+           <link href="http://www.apache.org/dev/version-control.html">version control</link>.
+          </li>
+          <li>At a command prompt, enter
+           '<code>svn co http://svn.apache.org/repos/asf/forrest/trunk forrest</code>'
+           (committers should replace <code>http</code> with <code>https</code>).</li>
           <li>This will create a directory called "<code>forrest</code>" where the Forrest source will be stored.</li> 
         </ol> 
         <p>Whenever you want to update your Forrest source tree to the current
          version, change to the top-level
-"<code>forrest</code>" directory and invoke "<code>svn update</code>".</p> 
-        <p>To see what changes you've made, invoke "<code>svn status</code>"</p>
+'<code>forrest</code>' directory and invoke '<code>svn update</code>'.</p> 
+        <p>To see what changes you've made, invoke '<code>svn status</code>'</p>
         <p>SVN is really powerful. See
           <link href="http://svnbook.red-bean.com/">Version Control with Subversion</link> - the opensource SVN book.
         </p>
