--- a/build.xml
+++ b/build.xml
@@ -19,7 +19,7 @@
   <import file="src/forrestbar/build.xml"/>
   
   <description>
-    Build system for Apache Xml Forrest.
+    Build system for Apache Forrest.
     Run the build script: build.bat or build.sh
   </description>
 
@@ -91,7 +91,8 @@
     <delete dir="src/core/context/WEB-INF/logs"/>
   </target>
 
-  <target name="dist-clean" depends="init, clean" description="Delete all non-forrest files">
+  <target name="dist-clean" depends="init, clean"
+     description="Delete all non-forrest files (*.settings, *.bak, *~)">
     <delete dir="${forrestbot.dir}/*.settings"/>
     <delete file="**/*.bak"/>
     <delete file="**/*~"/>
@@ -247,9 +248,9 @@
   <!-- ================================== -->
   <target name="test" 
           depends="testseed" 
-          description="Test that the features are ok before committing."/>
+          description="Test that the features are okay before committing."/>
 
-  <target  name="testseed" depends="init" description="Test that the features are ok before committing.">
+  <target name="testseed" depends="init">
     <property name="forrest.home" value="${dist-shbat.dir}" />  
     <property name="test.dir" value="${build.dir}/test"/>
     <delete dir="${test.dir}"/>
@@ -319,10 +320,8 @@
   <!-- =================================================================== -->
   <!-- Generate DTDs with entities expanded                                -->
   <!-- =================================================================== -->
-  <target name='expand-dtd' depends="init" description="Generates '-full' DTDs,
-	  with all entity refs expanded, for use with catalog-ignorant editors like
-	  IDEA">
-
+  <target name='expand-dtd' depends="init"
+     description="Generates '-full' DTDs, with all entity refs expanded, for use with catalog-ignorant editors like IDEA">
 	<taskdef name="dtd2xml" classpathref="classpath" classname="org.cyberneko.dtd.anttasks.DTD2XML"/>
 	<property name="dtdx.dir" location="build/tmp/dtdx"/>
 	<mkdir dir="${dtdx.dir}"/>
