Have @class attribute in DTD for every tag, which enables the "extra-css" section in the skinconf to be put to good use. Updated all v1.2 DTDs to become v1.3 DTDs and updated the v2.0a DTDs to become v2.0 DTDs. Added demo of extra-css to the seed site and updated some sample docs to use new v1.3 DTDs. Issue: FOR-174 Submitted by: Rick Tessner
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@23140 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -325,13 +325,23 @@
 	<dtd2xml classpathref="classpath" outputDir="${dtdx.dir}" preserveDirs="yes" extension=".dtdx">
 		<fileset dir="./src/core/context/resources/schema/dtd">
 			<include name="changes-v12.dtd"/>
+			<include name="changes-v13.dtd"/>
 			<include name="document-v11.dtd"/>
 			<include name="document-v12.dtd"/>
+			<include name="document-v13.dtd"/>
 			<include name="faq-v12.dtd"/>
+			<include name="faq-v13.dtd"/>
 			<include name="howto-v12.dtd"/>
+			<include name="howto-v13.dtd"/>
 			<include name="todo-v12.dtd"/>
+			<include name="todo-v13.dtd"/>
 			<include name="v20a/document-v20.dtd"/>
 			<include name="v20a/faq-v20.dtd"/>
+                        <include name="v20/document-v20.dtd"/>
+                        <include name="v20/changes-v20.dtd"/>
+                        <include name="v20/faq-v20.dtd"/>
+                        <include name="v20/howto-v20.dtd"/>
+                        <include name="v20/todo-v20.dtd"/>
 		</fileset>
 	</dtd2xml>
 
