--- a/src/core/context/WEB-INF/web.xml
+++ b/src/core/context/WEB-INF/web.xml
@@ -314,6 +314,17 @@
     -->
 
     <!--
+      Set commons-logging classes, in particular JCS, to use the logkit so the log messages
+      are properly handled by cocoon.
+    -->
+    <init-param>
+      <param-name>force-property</param-name>
+      <param-value>
+        org.apache.commons.logging.Log=org.apache.commons.logging.impl.LogKitLogger
+      </param-value>
+    </init-param>
+
+    <!--
       This parameter allows you to startup Cocoon2 immediately after startup
       of your servlet engine.
     -->
