Fix pathname to default catalog.xcat Add an empty "catalogs=" entry to silence the build warning.
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@23188 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/core/fresh-site/src/documentation/classes/CatalogManager.properties
+++ b/src/core/fresh-site/src/documentation/classes/CatalogManager.properties
@@ -26,10 +26,12 @@
 # See forrest/src/core/context/WEB-INF/cocoon.xconf
 
 # catalogs ... list of additional catalogs to load
-#  Note that Apache Forrest will automatically load its own default catalog
-#  from src/resources/schema/catalog.xcat
+#  (Note that Apache Forrest will automatically load its own default catalog
+#  from src/core/context/resources/schema/catalog.xcat)
 # use full pathnames
 # pathname separator is always semi-colon (;) regardless of operating system
 # directory separator is always slash (/) regardless of operating system
 #
 #catalogs=/home/me/forrest/my-site/src/documentation/resources/schema/catalog.xcat
+catalogs=
+
