--- a/forrest.properties
+++ b/forrest.properties
@@ -17,10 +17,15 @@
 ##############
 
 project.name=forrest
+
+# current skin
 #project.skin=forrest-site
+# old skins which will be shed soon
 #project.skin=forrest-css
-project.skin=krysalis-site
+#project.skin=krysalis-site
 #project.skin=tigris-style
+# skins under development
+#project.skin=css-style-dev
 
 project.bugtracking-url=http://issues.cocoondev.org/jira/secure/ViewIssue.jspa?key=
 project.issues-rss-url=http://issues.cocoondev.org/jira/secure/IssueNavigator.jspa?pid=10000&fixfor=10030&resolutionIds=-1&tempMax=25&view=rss&reset=true
