--- a/src/forrestbot/webapp/src/conf/settings.properties
+++ b/src/forrestbot/webapp/src/conf/settings.properties
@@ -21,14 +21,14 @@
 #forrest-exec=/path/to/forrest/src/core/bin/forrest
 #forrest-exec=d:/path/to/forrest/src/core/bin/forrest.bat
 #
-# directory that contains the forrestbot definition files for each site
+# directory that contains the forrestbot buildfiles for each site
 #config-dir=/path/to/somewhere/conf
 #
-# filesystem paths
+# filesystem paths; the build & log locations that forrestbot uses
 #build-dir=/path/to/somewhere/build
 #logs-dir=/path/to/somewhere/logs
 #
-# URLs (for HTML links)
+# URL to access the build-dir
 #build-url=http://somedomain/path/to/builds
 #
 # this will debug ALL output from the 'build' and 'deploy' processes that are started
