review a few docs
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@35558 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/documentation/content/xdocs/build.xml
+++ b/src/documentation/content/xdocs/build.xml
@@ -77,9 +77,8 @@
 ~/apache/forrest$ export PATH=$PATH:$FORREST_HOME/bin
      </source>
      <p>
-       After updating the Forrest source from SVN, or after you have made changes, you
-       will need to build forrest again. If there have been major updates,
-       then run '<code>build clean</code>' before '<code>./build.sh</code>'
+       After updating the Forrest source from SVN if there have been certain types of
+       updates (to the Java source for xml-forrest.jar), you will have to build forrest again.
      </p>
     </section>
 
