Added action to build a forrest site
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@35597 13f79535-47bb-0310-9956-ffa450edef68

--- a/scratchpad/eclipsePlugin/plugin.xml
+++ b/scratchpad/eclipsePlugin/plugin.xml
@@ -23,7 +23,7 @@
    class="org.apache.forrest.eclipse.ForrestPlugin">
 
    <runtime>
-      <library name="application.jar">
+      <library name="forrestplugin.jar">
          <export name="*"/>
       </library>
    </runtime>
@@ -52,23 +52,34 @@
             </separator>
          </menu>
           <action
-               label="Stop Forrest"
-               icon="icons/stop.png"
-               tooltip="Stop Forrest"
-               class="org.apache.forrest.eclipse.actions.StopForrest"
-               menubarPath="forrestMenu/forrestGroup"
-               toolbarPath="forrestGroup"
-               id="org.apache.forrest.eclipse.actions.StopForrest">
+                toolbarPath="forrestGroup"
+                label="Stop Forrest"
+                accelerator="o"
+                class="org.apache.forrest.eclipse.actions.StopForrest"
+                tooltip="Stop Forrest"
+                icon="icons/stop.png"
+                menubarPath="forrestMenu/forrestGroup"
+                id="org.apache.forrest.eclipse.actions.StopForrest">
          </action>
           <action
-               label="Start Forrest"
-               icon="icons/start.png"
-               tooltip="Start Forrest"
-               class="org.apache.forrest.eclipse.actions.StartForrest"
-               menubarPath="forrestMenu/forrestGroup"
-               toolbarPath="forrestGroup"
-               id="org.apache.forrest.eclipse.actions.StartForrest">
+                toolbarPath="forrestGroup"
+                label="Start Forrest"
+                accelerator="s"
+                class="org.apache.forrest.eclipse.actions.StartForrest"
+                tooltip="Start Forrest"
+                icon="icons/start.png"
+                menubarPath="forrestMenu/forrestGroup"
+                id="org.apache.forrest.eclipse.actions.StartForrest">
          </action>
+          <action
+                toolbarPath="forrestGroup"
+                label="Build Site"
+                class="org.apache.forrest.eclipse.actions.BuildSite"
+                tooltip="Build Forrest site"
+                icon="icons/build.png"
+                accelerator="b"
+                menubarPath="forrestMenu/forrestGroup"
+                id="org.apache.forrest.eclipse.Build"/>
       </actionSet>
    </extension>
    <extension
