Update to new skin names
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@35741 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/core/context/default-forrest.properties
+++ b/src/core/context/default-forrest.properties
@@ -23,9 +23,9 @@
 project.name=my-project
 
 # Specifies name of Forrest skin to use
-project.skin=book-tab
-#project.skin=tigris-style-1_1
-#project.skin=css-style-dev
+project.skin=crust
+#project.skin=tigris
+#project.skin=pelt-dev
 
 # comma seperated list, file:/// is supported
 forrest.skins.descriptors=http://forrest.apache.org/skins/skins.xml
