Use the new skin names.
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@36033 13f79535-47bb-0310-9956-ffa450edef68

--- a/forrest.properties
+++ b/forrest.properties
@@ -18,9 +18,9 @@
 
 project.name=forrest
 
-#project.skin=book-tab
-#project.skin=tigris-style-1_1
-#project.skin=css-style-dev
+#project.skin=crust
+#project.skin=tigris
+#project.skin=pelt-dev
 
 project.bugtracking-url=http://issues.cocoondev.org/jira/secure/ViewIssue.jspa?key=
 project.issues-rss-url=http://issues.cocoondev.org/jira/secure/IssueNavigator.jspa?pid=10000&fixfor=10030&resolutionIds=-1&tempMax=25&view=rss&reset=true
