Add section about using snapshots.
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@36162 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/documentation/content/xdocs/build.xml
+++ b/src/documentation/content/xdocs/build.xml
@@ -40,12 +40,20 @@
         </ol> 
         <p>Whenever you want to update your Forrest source tree to the current
          version, change to the top-level
-'<code>forrest</code>' directory and invoke '<code>svn update</code>'.</p> 
+"<code>forrest</code>" directory and invoke '<code>svn update</code>'.</p> 
         <p>To see what changes you've made, invoke '<code>svn status</code>'</p>
         <p>SVN is really powerful. See
           <link href="http://svnbook.red-bean.com/">Version Control with Subversion</link> - the opensource SVN book.
         </p>
       </section> 
+
+      <section id="snapshot">
+        <title>Using source snapshots</title>
+        <p>It is preferable to use SVN, but if you cannot for some reason, then
+          <link href="site:download">source snapshots</link> are available
+          (automatically packed every six hours).
+        </p>
+      </section>
     </section>
 
    <section id="building">
