Use the default servlet location for storing working files. One step forward towards multiuser copyless.
If there are problems, yell and/or revert this commit.

git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@36212 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/core/context/WEB-INF/web.xml
+++ b/src/core/context/WEB-INF/web.xml
@@ -214,12 +214,13 @@
       The default directory is "cocoon-files" directory in the servlet
       context's temp directory (context property javax.servlet.context.tempdir).
     -->
-
+    <!-- nicolaken: use the default servlet location so that it does not
+                    interfere with the source in copyless
     <init-param>
       <param-name>work-directory</param-name>
       <param-value>../tmp/cocoon-work</param-value>
     </init-param>
-
+    -->
     <!--
       This parameter allows to specify additional directories or jars
       which Cocoon should put into it's own classpath.
