renamed pelt-dev 2 pelt
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@36414 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/core/context/default-forrest.properties
+++ b/src/core/context/default-forrest.properties
@@ -25,7 +25,7 @@ project.name=my-project
 # Specifies name of Forrest skin to use
 project.skin=crust
 #project.skin=tigris
-#project.skin=pelt-dev
+#project.skin=pelt
 
 # comma seperated list, file:/// is supported
 forrest.skins.descriptors=http://forrest.apache.org/skins/skins.xml
