--- a/forrest.properties
+++ b/forrest.properties
@@ -20,7 +20,7 @@ project.name=forrest
 
 #project.skin=crust
 #project.skin=tigris
-#project.skin=pelt-dev
+#project.skin=pelt
 
 project.bugtracking-url=http://issues.cocoondev.org/jira/secure/ViewIssue.jspa?key=
 project.issues-rss-url=http://issues.cocoondev.org/jira/secure/IssueNavigator.jspa?pid=10000&fixfor=10030&resolutionIds=-1&tempMax=25&view=rss&reset=true
