--- a/src/core/fresh-site/forrest.properties
+++ b/src/core/fresh-site/forrest.properties
@@ -26,7 +26,7 @@
 # Specifies name of Forrest skin to use
 #project.skin=crust
 #project.skin=tigris
-#project.skin=pelt-dev
+#project.skin=pelt
 
 # comma seperated list, file:/// is supported
 #forrest.skins.descriptors=http://forrest.apache.org/skins/skins.xml,file:///c:/myskins/skins.xml
