put info.xml file in a project directory instead of forrest directory
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@36634 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/core/context/default-forrest.properties
+++ b/src/core/context/default-forrest.properties
@@ -61,6 +61,9 @@ project.lib-dir=${project.content-dir}/lib
 project.classes-dir=${project.content-dir}/classes
 project.translations-dir=${project.content-dir}/translations
 
+project.build-dir=${project.home}/build
+project.temp-dir=${project.build-dir}/tmp
+
 
 ##############
 # Cocoon catalog entity resolver properties
