--- a/scratchpad/XXE-config/build.xml
+++ b/scratchpad/XXE-config/build.xml
@@ -21,11 +21,30 @@ XXE Forrest plugin builder
  - You must update catalog.xml manually based on changes to forrest's catalog.xcat
 -->
 
-<project basedir="." name="xxe-forrest" default="update">
+<project basedir="." name="xxe-forrest" default="dist">
 
   <target name="-init">
     <property environment="env"/>
-  </target>  
+    <property name="version" value="1.2"/>
+    <property name="dist.dir" location="dist"/>
+    <property name="dist.name" value="XXE_forrest_config"/>
+  </target>
+  
+  <target name="clean" depends="-init" description="Clean all generated files">
+    <!-- created files -->
+    <delete dir="${dist.dir}"/>
+    <!-- copied files -->
+    <delete dir="entity"/>
+    <delete dir="dtd"/>
+    <delete file="catalog.xml"/>
+  </target>
+  
+  <target name="dist" depends="-init, update" description="Build zip file">
+    <mkdir dir="${dist.dir}"/>
+    <zip destfile="${dist.dir}/${dist.name}-${version}.zip">
+      <zipfileset prefix="forrest" dir="." excludes="dist/**"/>
+    </zip>
+  </target>
   
   <target name="update" depends="copy-dtds, copy-catalog" description="Update schemas from FORREST_HOME"/>
   
