fix link/fork menu items; other minor tidying
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@37082 13f79535-47bb-0310-9956-ffa450edef68

--- a/scratchpad/XXE-config/build.xml
+++ b/scratchpad/XXE-config/build.xml
@@ -15,12 +15,6 @@
   limitations under the License.
 -->
 
-<!--
-XXE Forrest plugin builder
-
- - You must update catalog.xml manually based on changes to forrest's catalog.xcat
--->
-
 <project basedir="." name="xxe-forrest" default="dist">
 
   <target name="-init">
@@ -46,7 +40,7 @@ XXE Forrest plugin builder
     </zip>
   </target>
   
-  <target name="update" depends="copy-dtds, copy-catalog" description="Update schemas from FORREST_HOME"/>
+  <target name="update" depends="clean, copy-dtds, copy-catalog" description="Update schemas from FORREST_HOME"/>
   
   <target name="copy-dtds" depends="-init" description="Copy DTDs from FORREST_HOME">
     <copy todir=".">
