The forrest project docs uses a project cli.xconf
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@37171 13f79535-47bb-0310-9956-ffa450edef68

--- a/forrest.properties
+++ b/forrest.properties
@@ -22,5 +22,7 @@ project.name=forrest
 #project.skin=tigris
 #project.skin=pelt
 
+project.configfile=${project.home}/src/documentation/conf/cli.xconf
+
 project.bugtracking-url=http://issues.cocoondev.org/jira/secure/ViewIssue.jspa?key=
 project.issues-rss-url=http://issues.cocoondev.org/jira/secure/IssueNavigator.jspa?pid=10000&fixfor=10030&resolutionIds=-1&tempMax=25&view=rss&reset=true
