Minor text tweaks.
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@37328 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/core/context/default-forrest.properties
+++ b/src/core/context/default-forrest.properties
@@ -27,7 +27,7 @@ project.skin=crust
 #project.skin=tigris
 #project.skin=pelt
 
-# comma seperated list, file:/// is supported
+# comma separated list, file:// is supported
 forrest.skins.descriptors=http://forrest.apache.org/skins/skins.xml
 
 ##############
@@ -67,10 +67,8 @@ project.temp-dir=${project.build-dir}/tmp
 
 ##############
 # Cocoon catalog entity resolver properties
-
 # A local OASIS catalog file to supplement the default Forrest catalog
 project.catalog=${project.schema-dir}/catalog.xcat
-
 
 ##############
 # validation properties
