Fix URLs to new Jira at cocoondev.org Update section heading style to be "underlined" All pages change. Also, sorry, i used a different XSLT processor last time, which switched the order of XML attributes. Now back to the default.
git-svn-id: https://svn.apache.org/repos/asf/forrest/site@37354 13f79535-47bb-0310-9956-ffa450edef68

--- a/dtd/.htaccess
+++ b/dtd/.htaccess
@@ -4,15 +4,13 @@
 # 
 #--------------------------------------------------------------------------
 # NOTE: There is a problem with getting the correct media-types ...
-# i.e. http://svn.apache.org/repos/asf/forrest/trunk/.../*.dtd
+# http://svn.apache.org/repos/asf/forrest/trunk/.../*.dtd
 # Currently the server just delivers text/plain
 # We can do 'svn propset svn:mime-type' for the *.dtd etc.
 # which will cause them to be delivered properly.
-# However there are Issues for SVN (#1002 and #1233)
-# whereby the files will be seen by SVN as binary, hence no diffs.
-# http://subversion.tigris.org/issues/show_bug.cgi?id=1002
-# http://subversion.tigris.org/issues/show_bug.cgi?id=1233
-# http://issues.cocoondev.org/jira/secure/ViewIssue.jspa?key=FOR-107
+# However there is an Issue for SVN (#1233) whereby the files will be seen
+# by SVN as binary, hence no diffs.
+# Please vote for http://subversion.tigris.org/issues/show_bug.cgi?id=1233
 # 
 # So the workaround is to use ViewCVS to explicity set the media-type.
 #--------------------------------------------------------------------------
