--- a/forrest.properties
+++ b/forrest.properties
@@ -18,9 +18,8 @@
 
 project.name=forrest
 
-#project.skin=crust
 #project.skin=tigris
-#project.skin=pelt
+project.skin=pelt
 
 project.configfile=${project.home}/src/documentation/conf/cli.xconf
 
