add ability to override linkmap, menu and tabs .xmap files to allow the generation of site.xml and tabs.xml from other source files such as imsmanifests for IMS content packages
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@43428 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/core/context/default-forrest.properties
+++ b/src/core/context/default-forrest.properties
@@ -49,6 +49,9 @@ project.raw-content-dir=${project.content-dir}/content
 project.conf-dir=${project.content-dir}/conf
 project.sitemap-dir=${project.content-dir}
 project.sitemap=${project.content-dir}/sitemap.xmap
+project.tabsxmap=${project.content-dir}/tabs.xmap
+project.menuxmap=${project.content-dir}/menu.xmap
+project.linkmapxmap=${project.content-dir}/linkmap.xmap
 project.xdocs-dir=${project.content-dir}/content/xdocs
 project.resources-dir=${project.content-dir}/resources
 project.stylesheets-dir=${project.resources-dir}/stylesheets
