--- a/src/core/context/default-forrest.properties
+++ b/src/core/context/default-forrest.properties
@@ -78,7 +78,7 @@ project.catalog=${project.schema-dir}/catalog.xcat
 
 # These props determine if validation is performed at all
 # Values are inherited unless overridden.
-# Eg, if forrest.validate=false, then all others are false unless set to true.
+# e.g. if forrest.validate=false then all others are false unless set to true.
 #forrest.validate=true
 #forrest.validate.xdocs=${forrest.validate}
 #forrest.validate.skinconf=${forrest.validate}
@@ -137,7 +137,7 @@ forrest.maxmemory=64m
 forrest.jvmargs=
 # The bugtracking URL - the issue number will be appended
 project.bugtracking-url=http://issues.apache.org/bugzilla/show_bug.cgi?id=
-#project.bugtracking-url=http://issues.apace.org/jira/browse/
+#project.bugtracking-url=http://issues.apache.org/jira/browse/
 # The issues list as rss
 #project.issues-rss-url=
 project.i18n=false
