Synchronise with default.forrest.properties Also bring back the mechanism to switch off certain parts of the validation. These settings seemed to be accidently removed at r9099 2004-01-04
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@43442 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/core/fresh-site/forrest.properties
+++ b/src/core/fresh-site/forrest.properties
@@ -27,7 +27,7 @@
 #project.skin=tigris
 #project.skin=pelt
 
-# comma seperated list, file:/// is supported
+# comma separated list, file:// is supported
 #forrest.skins.descriptors=http://forrest.apache.org/skins/skins.xml,file:///c:/myskins/skins.xml
 
 ##############
@@ -45,9 +45,9 @@
 
 #project.status=status.xml
 #project.content-dir=src/documentation
+#project.raw-content-dir=${project.content-dir}/content
 #project.conf-dir=${project.content-dir}/conf
 #project.sitemap-dir=${project.content-dir}
-#project.raw-content-dir=${project.content-dir}/content
 #project.xdocs-dir=${project.content-dir}/content/xdocs
 #project.resources-dir=${project.content-dir}/resources
 #project.stylesheets-dir=${project.resources-dir}/stylesheets
@@ -57,19 +57,26 @@
 #project.skinconf=${project.content-dir}/skinconf.xml
 #project.lib-dir=${project.content-dir}/lib
 #project.classes-dir=${project.content-dir}/classes
-
+#project.translations-dir=${project.content-dir}/translations
 
 ##############
 # Cocoon catalog entity resolver properties
-
 # A local OASIS catalog file to supplement the default Forrest catalog
 #project.catalog=${project.schema-dir}/catalog.xcat
 
 ##############
 # validation properties
 
-# Determine if validation is performed
+# This set of properties determine if validation is performed at all
+# Values are inherited unless overridden.
+# e.g. if forrest.validate=false then all others are false unless set to true.
 #forrest.validate=true
+#forrest.validate.xdocs=${forrest.validate}
+#forrest.validate.skinconf=${forrest.validate}
+#forrest.validate.sitemap=${forrest.validate}
+#forrest.validate.stylesheets=${forrest.validate}
+#forrest.validate.skins=${forrest.validate}
+#forrest.validate.skins.stylesheets=${forrest.validate.skins}
 
 # *.failonerror=(true|false)    stop when an XML file is invalid
 #forrest.validate.failonerror=true
@@ -95,7 +102,7 @@
 #forrest.jvmargs=
 # The bugtracking URL - the issue number will be appended
 #project.bugtracking-url=http://issues.apache.org/bugzilla/show_bug.cgi?id=
-#project.bugtracking-url=http://issues.apace.org/jira/browse/
+#project.bugtracking-url=http://issues.apache.org/jira/browse/
 # The issues list as rss
 #project.issues-rss-url=
 #I18n Property only works for the "forrest run" target.
