Minor text tweaks.
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@43443 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/core/fresh-site/forrest.properties
+++ b/src/core/fresh-site/forrest.properties
@@ -67,7 +67,7 @@
 ##############
 # validation properties
 
-# This set of properties determine if validation is performed at all
+# This set of properties determine if validation is performed
 # Values are inherited unless overridden.
 # e.g. if forrest.validate=false then all others are false unless set to true.
 #forrest.validate=true
@@ -78,10 +78,10 @@
 #forrest.validate.skins=${forrest.validate}
 #forrest.validate.skins.stylesheets=${forrest.validate.skins}
 
-# *.failonerror=(true|false)    stop when an XML file is invalid
+# *.failonerror=(true|false) - stop when an XML file is invalid
 #forrest.validate.failonerror=true
 
-# *.excludes=(pattern)  Comma-separated list of path patterns to not validate
+# *.excludes=(pattern) - comma-separated list of path patterns to not validate
 # e.g.
 #forrest.validate.xdocs.excludes=samples/subdir/**, samples/faq.xml
 #forrest.validate.xdocs.excludes=
