--- a/src/core/context/default-forrest.properties
+++ b/src/core/context/default-forrest.properties
@@ -76,7 +76,7 @@ project.catalog=${project.schema-dir}/catalog.xcat
 ##############
 # validation properties
 
-# These props determine if validation is performed at all
+# This set of properties determine if validation is performed
 # Values are inherited unless overridden.
 # e.g. if forrest.validate=false then all others are false unless set to true.
 #forrest.validate=true
@@ -87,11 +87,10 @@ project.catalog=${project.schema-dir}/catalog.xcat
 #forrest.validate.skins=${forrest.validate}
 #forrest.validate.skins.stylesheets=${forrest.validate.skins}
 
-
 # Key:
-# *.failonerror=(true|false)    stop when an XML file is invalid
-# *.includes=(pattern)         Comma-separated list of path patterns to validate
-# *.excludes=(pattern)         Comma-separated list of path patterns to not validate
+# *.failonerror=(true|false) - stop when an XML file is invalid
+# *.includes=(pattern) - comma-separated list of path patterns to validate
+# *.excludes=(pattern) - comma-separated list of path patterns to not validate
 
 #forrest.validate.failonerror=true
 #forrest.validate.includes=**/*
