--- a/src/core/context/default-forrest.properties
+++ b/src/core/context/default-forrest.properties
@@ -23,9 +23,8 @@
 project.name=my-project
 
 # Specifies name of Forrest skin to use
-project.skin=crust
+project.skin=pelt
 #project.skin=tigris
-#project.skin=pelt
 
 # comma separated list, file:// is supported
 forrest.skins.descriptors=http://forrest.apache.org/skins/skins.xml
