Don't specify a skin for Forrest, we will always use the default one defined in src/core/context/default-forrest.properties
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@43458 13f79535-47bb-0310-9956-ffa450edef68

--- a/forrest.properties
+++ b/forrest.properties
@@ -18,8 +18,8 @@
 
 project.name=forrest
 
-#project.skin=tigris
-project.skin=pelt
+#project.skin=Don't specify a skin for Forrest, we will always use the 
+#             default one defined in src/core/context/default-forrest.properties
 
 project.configfile=${project.home}/src/documentation/conf/cli.xconf
 
