<action dev="NKB" type="update" context="core">         The static site generation now uses the linkmap.html file as         an entry point. This means that all the files in the site.xml         file will be rendered even if there is no index.html file.         This also means that if index.html is not in the navigation,         the site generation will break: to restore the previous way         just add project.start-uri=linkmap.html to forrest.properties.       </action>
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@43535 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/core/context/default-forrest.properties
+++ b/src/core/context/default-forrest.properties
@@ -124,7 +124,7 @@ project.catalog=${project.schema-dir}/catalog.xcat
 # General Forrest properties
 
 # The URL to start crawling from
-project.start-uri=index.html
+project.start-uri=linkmap.html
 # Set logging level for messages printed to the console
 # (DEBUG, INFO, WARN, ERROR, FATAL_ERROR)
 project.debuglevel=ERROR
