Now using project.start-uri=linkmap.html
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@45948 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/core/fresh-site/forrest.properties
+++ b/src/core/fresh-site/forrest.properties
@@ -38,7 +38,7 @@
 ##############
 # layout properties
 
-# Properties that must be set to override the default locations
+# Properties that can be set to override the default locations
 #
 # Parent properties must be set. This usually means uncommenting
 # project.content-dir if any other property using it is uncommented
@@ -86,7 +86,7 @@
 # General Forrest properties
 
 # The URL to start crawling from
-#project.start-uri=index.html
+#project.start-uri=linkmap.html
 # Set logging level for messages printed to the console
 # (DEBUG, INFO, WARN, ERROR, FATAL_ERROR)
 #project.debuglevel=ERROR
