--- a/scratchpad/eclipsePlugin/plugin.xml
+++ b/scratchpad/eclipsePlugin/plugin.xml
@@ -35,6 +35,8 @@
       <import plugin="org.eclipse.jdt.launching"/>
       <import plugin="org.eclipse.core.resources"/>
       <import plugin="org.eclipse.core.runtime"/>
+      <import plugin="org.eclipse.ant.core"/>
+      <import plugin="org.eclipse.ui.ide"/>
    </requires>
 
 
@@ -85,6 +87,18 @@
             class="org.apache.forrest.eclipse.preference.ForrestPreferences"
             name="Forrest Preferences"
             id="org.apache.forrest.eclipse.preference.ForrestPreferences"/>
+   </extension>
+   <extension
+         point="org.eclipse.ui.newWizards">
+      <category
+            name="Forrest"
+            id="org.apache.forrest.eclipse"/>
+      <wizard
+            class="org.apache.forrest.eclipse.wizards.NewProjectWizard"
+            category="org.apache.forrest.eclipse"
+            project="true"
+            name="Seed New Project"
+            id="org.apache.forrest.eclipse.NewProjectWizard"/>
    </extension>
 
 </plugin>
