New XDoc wizard
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@46120 13f79535-47bb-0310-9956-ffa450edef68

--- a/scratchpad/eclipsePlugin/plugin.xml
+++ b/scratchpad/eclipsePlugin/plugin.xml
@@ -99,6 +99,11 @@
             project="true"
             name="Seed New Project"
             id="org.apache.forrest.eclipse.NewProjectWizard"/>
+      <wizard
+            class="org.apache.forrest.eclipse.wizards.NewXDoc"
+            category="org.apache.forrest.eclipse"
+            name="XDoc File"
+            id="org.apache.forrest.eclipse.wizards.NewXDoc"/>
    </extension>
 
 </plugin>
