Do not advertise the 'build patch' capability. May need to be removed. It makes a messy patch when they have other pending changes.
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@47080 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -359,8 +359,11 @@
   <!-- =================================================================== -->
   <!-- Use Apache Ant to generate a patch file                             -->
   <!-- =================================================================== -->
-    <target name="patch"
+    <target name="patch">
+<!-- Do not advertise this capability. May need to be removed.
+     It makes a messy patch when they have other pending changes.
         description="Create a patch from your working copy, ready for contribution">
+-->
       <ant antfile="tools/targets/patch.xml" target="patchpackage"/>
     </target>
 
