Set property quote-ampersand=yes because when using "html" source input (i.e. *.ihtml or *.html) if an ampersand was already encoded properly then it was being turned into a "&amp;amp;". Suggested by: Lorenz Froihofer FOR-301
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@47526 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/core/context/WEB-INF/jtidy.properties
+++ b/src/core/context/WEB-INF/jtidy.properties
@@ -22,7 +22,7 @@ show-warnings=yes
 numeric-entities=yes
 quote-marks=yes
 quote-nbsp=yes
-quote-ampersand=no
+quote-ampersand=yes
 break-before-br=yes
 uppercase-tags=no
 uppercase-attributes=no
