Our Gump descriptor has moved to cvs://gump/project/forrest.xml So get our version number from this build.xml instead.
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@54767 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -28,14 +28,11 @@
       <format property="YEAR" pattern="yyyy" locale="en"/>
     </tstamp>
 
-    <xmlproperty file="module.xml"     prefix="xgump"    keeproot="true"  collapseAttributes="true" />
     <xmlproperty file="status.xml"     prefix="xstatus"  keeproot="false" collapseAttributes="true" />   
     <xmlproperty file="properties.xml"                   keeproot="false" collapseAttributes="true" />
 
-    <property name="name"                  value="apache-forrest"/>
-    <property name="packages"              value="${xgump.module.project.packages}"/>
-    <property name="version"
-      value="${xgump.module.project.version.major}.${xgump.module.project.version.minor}${xgump.module.project.version.tag}"/>
+    <property name="name" value="apache-forrest"/>
+    <property name="version" value="0.7-dev"/>
 
     <property name="java.dir"              location="src/java"/>
     <property name="build.dir"             location="build"/>
