add project.required.plugins property
git-svn-id: https://svn.apache.org/repos/asf/forrest/branches/sitemap-plugins@55007 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/core/context/default-forrest.properties
+++ b/src/core/context/default-forrest.properties
@@ -137,3 +137,6 @@ project.bugtracking-url=http://issues.apache.org/bugzilla/show_bug.cgi?id=
 # The issues list as rss
 #project.issues-rss-url=
 project.i18n=false
+# The names of plugins that are required to build the project
+# comma separated list (no spaces)
+project.required.plugins=
