add project.required.plugins property
git-svn-id: https://svn.apache.org/repos/asf/forrest/branches/sitemap-plugins@55008 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/core/fresh-site/forrest.properties
+++ b/src/core/fresh-site/forrest.properties
@@ -102,3 +102,6 @@
 #project.issues-rss-url=
 #I18n Property only works for the "forrest run" target.
 #project.i18n=true
+# The names of plugins that are required to build the project
+# comma separated list (no spaces)
+# project.required.plugins=
